--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 @import 'layout/footer';
 @import 'layout/header';
 @import 'layout/main';
+@import 'layout/section';
 
 // state
 @import 'state/state';
