--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,13 +3,15 @@
 // import normalize.scss from node_modules
 @import '~normalize.scss/normalize.scss';
 
+// abstracts
+@import 'abstracts/helpers';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
+
 // base
 @import 'base/base';
 @import 'base/fonts';
-@import 'base/helpers';
-@import 'base/mixins';
 @import 'base/typography';
-@import 'base/variables';
 
 // layout
 @import 'layout/container';
