adding google fonts

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -5,3 +5,8 @@ $max-width: 1260px;
 $small: '320px';
 $medium: '768px';
 $large: '1024px';
+
+// fonts
+$header-font: 'Open Sans', sans-serif;
+$body-font: 'Roboto', sans-serif;
+
