--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -13,3 +13,8 @@
     -webkit-font-smoothing: subpixel-antialiased;
   }
 }
+
+@function rem($size) {
+  $rem-size: $size / 16;
+  @return #{$rem-size}rem;
+}
