added styling for section copy

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,8 @@
 @import 'layout/main';
 @import 'layout/section';
 
+@import 'modules/copy';
 @import 'modules/heading';
+
 // state
 @import 'state/state';
