added section background colours

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -12,3 +12,8 @@ $body-font: 'Roboto', sans-serif;
 
 // colors
 $black: #333;
+$orange: #ff6600;
+$red: #cc3c3b;
+$teal: #79ffe0;
+$yellow: #fec50a;
+$white: #fff;
