added alt class to copy

--- a/src/styles/modules/_copy.scss
+++ b/src/styles/modules/_copy.scss
@@ -2,4 +2,10 @@
   flex: 0 1 50%;
   font-size: rem(18);
   line-height: rem(30);
+
+  &--alt {
+    background: $black;
+    color: $white;
+    padding: rem(10) rem(30);
+  }
 }
