--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -2,6 +2,10 @@
   height: 100vh;
   padding: percentage(90px/$max-width) 0;
 
+  &--about {
+    background-color: $teal;
+  }
+
 
   &__inner {
     flex: 0 1 50%;
