--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -4,4 +4,9 @@
   margin-left: auto;
   margin-right: auto;
   width: 90%;
+
+  &--center {
+    align-items: center;
+    justify-content: center;
+  }
 }
