--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,8 +22,11 @@
 @import 'layout/main';
 @import 'layout/section';
 
+// modules
 @import 'modules/copy';
 @import 'modules/heading';
+@import 'modules/link';
+@import 'modules/social';
 
 // state
 @import 'state/state';
