--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@
 @import 'modules/copy';
 @import 'modules/heading';
 @import 'modules/link';
+@import 'modules/particles';
 @import 'modules/social';
 
 // state
