adding devops component with basic styling ... maybe a bit too garish though

--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -16,6 +16,10 @@
     background: $black;
   }
 
+  &--devops {
+    background: repeating-linear-gradient(45deg, $yellow, $yellow 75px, $grey 75px, $grey 150px);
+  }
+
   &__inner {
     flex: 0 1 50%;
 
