--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:800|Roboto');
 
 // abstracts
+@import 'abstracts/animations';
 @import 'abstracts/helpers';
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
