--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -12,7 +12,8 @@ $body-font: 'Roboto', sans-serif;
 
 // colors
 $black: #333;
-$grey: #4d4d4d;
+$blue: #82AAFF;
+$grey: #999;
 $orange: #ff6600;
 $red: #cc3c3b;
 $teal: #79ffe0;
