applied font-smoothing to 'light-on-dark' sections, so fonts look extra crisp

--- a/src/styles/modules/_heading.scss
+++ b/src/styles/modules/_heading.scss
@@ -6,6 +6,7 @@
   text-transform: uppercase;
 
   &--alt {
+    @include font-smoothing();
     background: $black;
     color: $white;
     display: inline-block;
