--- a/src/styles/modules/_copy.scss
+++ b/src/styles/modules/_copy.scss
@@ -4,6 +4,7 @@
   line-height: rem(30);
 
   &--alt {
+    @include font-smoothing();
     background: $black;
     color: $white;
     padding: rem(10) rem(30);
