added basic transition animation to carousel slides

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@
 @import 'layout/section';
 
 // modules
+@import 'modules/carousel';
 @import 'modules/copy';
 @import 'modules/heading';
 @import 'modules/link';
