removed transition-time variable as it will only be used in one place, so no real need for it to be a variable

--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -17,7 +17,7 @@
   }
 
   &--frontend {
-    transition: background-color $transitionTime;
+    transition: background-color .4s ease-in-out;
   }
 
   &--react {
