added gradient / grid overlay to devops component .. not too sure about the color scheme mind

--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -35,10 +35,21 @@
   &--sass {
     background-color: $sass;
   }
+
   &--devops {
-    background: linear-gradient(180deg, $teal, $blue);
-    background-size: 400% 400%;
-    animation: backgroundPosition 10s ease infinite;
+    background: linear-gradient(45deg, $opal, $blue);
+
+    &:after {
+      background-image: url('https://s3-eu-west-1.amazonaws.com/cdn.nath.codes/src/img/hexagons-opal.svg');
+      bottom: 0;
+      content: '';
+      position: absolute;
+      left: 0;
+      opacity: .4;
+      right: 0;
+      top: 0;
+      z-index: 1;
+    }
   }
 
   &__inner {
