--- a/src/styles/modules/_heading.scss
+++ b/src/styles/modules/_heading.scss
@@ -6,10 +6,17 @@
   text-transform: uppercase;
 
   &--alt {
+
     @include font-smoothing();
     background: $black;
     color: $white;
     display: inline-block;
     padding: 0 rem(30);
   }
+
+  &--devops {
+    position: relative;
+    z-index: 2;
+  }
+
 }
