created video background component for err ... displaying background videos

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,7 @@
 @import 'modules/link';
 @import 'modules/particles';
 @import 'modules/social';
+@import 'modules/video-background';
 
 // state
 @import 'state/state';
