created hero component

--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -13,4 +13,10 @@
   &--right {
     justify-content: flex-end;
   }
+
+  &--hero {
+    align-items: center;
+    position: relative;
+    z-index: 3;
+  }
 }
