added an overlay scss module for adding a 'lil darkened overlay on anything and everything

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,6 +27,7 @@
 @import 'modules/copy';
 @import 'modules/heading';
 @import 'modules/link';
+@import 'modules/overlay';
 @import 'modules/particles';
 @import 'modules/social';
 @import 'modules/video-background';
