moving scss functions into separate file rather then lumping them in with mixins

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 
 // abstracts
 @import 'abstracts/animations';
+@import 'abstracts/functions';
 @import 'abstracts/helpers';
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
