added nice little function to create a basic flexbox grid with gutters. This will be used for the project list, amongst other things

--- a/src/styles/abstracts/_functions.scss
+++ b/src/styles/abstracts/_functions.scss
@@ -2,3 +2,7 @@
   $rem-size: $size / 16;
   @return #{$rem-size}rem;
 }
+
+@function column($width, $gutter: 25px) {
+  @return calc(#{$width} * 100% - (1 - #{$width})* #{$gutter});
+}
