--- a/src/styles/modules/_social.scss
+++ b/src/styles/modules/_social.scss
@@ -3,17 +3,19 @@
   justify-content: center;
 
   &__logo {
+    transform: scale(1);
+    transition: all .20s ease-in-out;
+
+    &:hover {
+      transform: scale(1.07);
+    }
+
     svg {
       height: 25vh;
     }
 
     path {
       fill: $white;
-      transition: fill .20s ease-in-out;
-
-      &:hover {
-        fill: $black;
-      }
     }
   }
 }
