--- a/src/styles/modules/_video-background.scss
+++ b/src/styles/modules/_video-background.scss
@@ -1,6 +1,8 @@
 .video-background {
+  height: 100vh;
+  left: 0;
+  object-fit: cover;
   position: absolute;
   top: 0;
-  bottom: 0;
-  width: 100%;
+  width: 100vw;
 }
