--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,7 @@
 @import 'layout/section';
 
 // modules
+@import 'modules/button';
 @import 'modules/carousel';
 @import 'modules/copy';
 @import 'modules/heading';
