added background variable / color to projects section

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -24,3 +24,4 @@ $react: lighten(#00d8ff, 30%);
 $sass: lighten(#8cc84b, 30%);
 $webpack: lighten(#1c78c0, 30%);
 $opal: #65d2c8;
+$light_grey: #d6e2de;
