added margin to projects as they're a bit too close to the title

--- a/src/styles/modules/_wrapper.scss
+++ b/src/styles/modules/_wrapper.scss
@@ -3,5 +3,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-top: percentage(40px/$max-width);
+  }
+
   }
 }
