--- a/src/styles/modules/_overlay.scss
+++ b/src/styles/modules/_overlay.scss
@@ -3,12 +3,14 @@
   background: $black;
   bottom: 0;
   left: 0;
-  opacity: .4;
   right: 0;
   position: absolute;
   top: 0;
 
   &--hero {
+    opacity: .4;
+    z-index: 1;
+  }
     z-index: 1;
   }
 }
