added overlay effect to project on hover

--- a/src/styles/modules/_overlay.scss
+++ b/src/styles/modules/_overlay.scss
@@ -11,6 +11,10 @@
     opacity: .4;
     z-index: 1;
   }
+
+  &--project {
+    transition: opacity .20s;
+    opacity: 0;
     z-index: 1;
   }
 }
