--- a/src/styles/modules/_project.scss
+++ b/src/styles/modules/_project.scss
@@ -1,12 +1,17 @@
 .project {
   flex: 0 0 column('1/2');
   margin-bottom: 25px;
+  transition: all .25s ease-in-out;
 
   &__img {
   &:hover {
     .overlay--project {
       opacity: .5;
     }
+    .button--project {
+      opacity: 1;
+    }
+
     display: block;
   }
 
