--- a/src/styles/modules/_wrapper.scss
+++ b/src/styles/modules/_wrapper.scss
@@ -6,5 +6,16 @@
     margin-top: percentage(40px/$max-width);
   }
 
+  &--project-button {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    vertical-align: middle;
   }
 }
