projects now appear 'staggered' on desktop

--- a/src/styles/modules/_project.scss
+++ b/src/styles/modules/_project.scss
@@ -3,6 +3,10 @@
   margin-bottom: 50px;
   transition: all .25s ease-in-out;
 
+  &:nth-child(odd) {
+    margin-top: -177px;
+  }
+
   &:hover {
     .overlay--project {
       opacity: .5;
