refactored 'l-container' module and moved flexbox logic into separate 'flex' module so it can be reused across site

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@
 @import 'modules/button';
 @import 'modules/carousel';
 @import 'modules/copy';
+@import 'modules/flex';
 @import 'modules/heading';
 @import 'modules/link';
 @import 'modules/overlay';
