--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -1,21 +1,11 @@
 .l-container {
-  display: flex;
+  height: 100%;
   max-width: $max-width;
   margin-left: auto;
   margin-right: auto;
   width: 90%;
 
-  &--center {
-    align-items: center;
-    justify-content: center;
-  }
-
-  &--right {
-    justify-content: flex-end;
-  }
-
   &--hero {
-    align-items: center;
     position: relative;
     z-index: 3;
   }
