added flex between / wrap to flex module

--- a/src/styles/modules/_flex.scss
+++ b/src/styles/modules/_flex.scss
@@ -12,4 +12,12 @@
   &--right {
     justify-content: flex-end;
   }
+
+  &--between {
+    justify-content: space-between;
+  }
+
+  &--wrap {
+    flex-wrap: wrap;
+  }
 }
