added basic nav component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,7 @@
 @import 'modules/flex';
 @import 'modules/heading';
 @import 'modules/link';
+@import 'modules/nav';
 @import 'modules/overlay';
 @import 'modules/particles';
 @import 'modules/project';
