added 'itemClass' prop nav component so nav can be styled for desktop / mobile using same component

--- a/src/styles/modules/_nav.scss
+++ b/src/styles/modules/_nav.scss
@@ -2,6 +2,11 @@
   &__item {
     color: $white;
 
+    &--l {
+      margin-right: rem(20);
+    }
+  }
+
   &__icon {
     cursor: pointer;
     width: rem(40);
