article is now full width until medium breakpoint

--- a/src/styles/modules/_article.scss
+++ b/src/styles/modules/_article.scss
@@ -1,5 +1,7 @@
 .article {
-  flex: 0 0 column('1/2');
+  @include media($large) {
+    flex: 0 0 column('1/2');
+  }
 
   &--centered {
     align-items: center;
