--- a/src/styles/modules/_heading.scss
+++ b/src/styles/modules/_heading.scss
@@ -20,8 +20,12 @@
 
   &--hero {
     color: $white;
-    line-height: 91px;
     margin-bottom: 0;
+    text-align: left;
+
+    @include media($medium) {
+      line-height: 91px;
+    }
   }
 
   &--projects {
