frontend carousel now appears underneath copy on smaller devices

--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -10,6 +10,14 @@
     z-index: 3;
   }
 
+  &--frontend {
+    flex-direction: column;
+
+    @include media($medium) {
+      flex-direction: row;
+    }
+  }
+
   &--nav {
     align-items: center;
   }
