--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,8 +1,13 @@
 .l-header {
+    display: none;
     padding-top: 40px;
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
     z-index: 4;
+
+    @include media($medium) {
+      display: block;
+    }
 }
