--- a/src/styles/modules/_project.scss
+++ b/src/styles/modules/_project.scss
@@ -1,7 +1,10 @@
 .project {
-  flex: 0 0 column('1/2');
   margin-bottom: 50px;
   transition: all .25s ease-in-out;
+
+  @include media($medium) {
+    flex: 0 0 column('1/2');
+  }
 
   &:hover {
     .overlay--project {
