aligning backend heading with flex end as it's on the right-hand side on desktop, so keeping it consistent

--- a/src/styles/modules/_heading.scss
+++ b/src/styles/modules/_heading.scss
@@ -28,6 +28,14 @@
     }
   }
 
+  &--backend {
+    align-self: flex-end;
+
+    @include media($medium) {
+      align-self: flex-start;
+    }
+  }
+
   &--projects {
     align-self: flex-end;
   }
