added cross image to about section, for no other reason then it looks cool

--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -10,7 +10,8 @@
     z-index: 3;
   }
 
-  &--frontend {
+  &--frontend,
+  &--about {
     flex-direction: column;
 
     @include media($medium) {
