tweaked the design of the project section to get better with the previous section

--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -13,7 +13,7 @@
   }
 
   &--projects {
-    background: $light_grey;
+    background: $grey;
     padding-bottom: percentage(75px/$max-width)
   }
 
