--- a/src/styles/modules/_project.scss
+++ b/src/styles/modules/_project.scss
@@ -1,4 +1,5 @@
 .project {
+  border: solid 5px $black;
   margin-bottom: 50px;
   position: relative;
   transition: all .25s ease-in-out;
@@ -29,13 +30,13 @@
   &__meta {
     background: $black;
     right: 0;
-    padding: 10px;
+    padding: 5px 5px 10px 10px;
     position: absolute;
     top: 0;
     z-index: 2;
 
     @include media($medium) {
-      padding: 20px;
+      padding: 5px 5px 10px 10px;
     }
   }
 
