refactored social icon to be smaller and also share same hover effect as contact button to keep things consistant

--- a/src/styles/modules/_social.scss
+++ b/src/styles/modules/_social.scss
@@ -1,22 +1,21 @@
 .social {
 
-  margin-top: auto;
-
   &__logo {
     display: block;
-    transform: scale(1);
-    transition: all .20s ease-in-out;
 
     &:hover {
-      transform: scale(1.07);
+      path {
+        fill: $black;
+      }
     }
 
     svg {
-      height: 25vh;
+      height: 12vh;
     }
 
     path {
       fill: $white;
+      transition: all .20s ease-in-out;
     }
   }
 }
