setting heading font-weight as it's not present in safari

--- a/src/styles/modules/_heading.scss
+++ b/src/styles/modules/_heading.scss
@@ -1,6 +1,7 @@
 .heading {
   font-family: $header-font;
   font-size: 36px;
+  font-weight: 800;
   display: inline-block;
   letter-spacing: 1px;
   margin: 0 0 rem(30);
