--- a/src/styles/modules/_heading.scss
+++ b/src/styles/modules/_heading.scss
@@ -6,6 +6,7 @@
   letter-spacing: 1px;
   margin: 0 0 rem(30);
   text-align: center;
+  white-space: nowrap;
 
   @include media($medium) {
     text-align: left;
