amended flex attributes to be declared explicitly rather then the shorthand syntax as a bug in IE 11 can't cope with using calc() as the flex-basis

--- a/src/styles/modules/_article.scss
+++ b/src/styles/modules/_article.scss
@@ -1,6 +1,8 @@
 .article {
   @include media($medium) {
-    flex: 0 0 column('1/2');
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: column('1/2');
   }
 
   &--centered {
