--- a/src/styles/modules/_project.scss
+++ b/src/styles/modules/_project.scss
@@ -5,7 +5,9 @@
   transition: all .25s ease-in-out;
 
   @include media($medium) {
-    flex: 0 0 column('1/2');
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: column('1/2');
   }
 
   &:hover {
