set project heading font-weight as it was not showing in Safari

--- a/src/styles/modules/_project.scss
+++ b/src/styles/modules/_project.scss
@@ -46,6 +46,7 @@
     color: $white;
     font-family: $header-font;
     font-size: rem(18);
+    font-weight: 800;
     line-height: 1;
 
     @include media($medium) {
