setting hero heading white-space to 'normal' otherwise the hero heading breaks out on small and medium devices

--- a/src/styles/modules/_heading.scss
+++ b/src/styles/modules/_heading.scss
@@ -24,7 +24,7 @@
     color: $white;
     margin-bottom: 0;
     text-align: left;
-
+    white-space: normal;
     @include media($medium) {
       line-height: 91px;
     }
